Update AWS supported instance type for FortiGate & FortiAnalyzer

--- a/templates/autoscale-new-vpc.template
+++ b/templates/autoscale-new-vpc.template
@@ -75,11 +75,22 @@
             "Default": "c5.large",
             "AllowedValues": [
                 "t2.small",
+                "t3.small",
+                "t3.xlarge",
+                "c4.large",
+                "c4.xlarge",
+                "c4.2xlarge",
+                "c4.4xlarge",
+                "c4.8xlarge",
                 "c5.large",
                 "c5.xlarge",
                 "c5.2xlarge",
                 "c5.4xlarge",
-                "c5.9xlarge"
+                "c5.9xlarge",
+                "c5.18xlarge",
+                "c5n.large",
+                "c5n.xlarge",
+                "c5n.2xlarge"
             ],
             "ConstraintDescription": "must be a valid EC2 instance type.",
             "Description": "The instance type for the FortiGates in the Auto Scaling group. There are t2.small and compute-optimized instances such as c4 and c5 available with different vCPU sizes and bandwidths. For more information about instance types, see https://aws.amazon.com/ec2/instance-types/."
@@ -292,12 +303,40 @@
             "Default": "m4.large",
             "AllowedValues": [
                 "c4.large",
+                "c4.xlarge",
                 "c4.2xlarge",
+                "c4.4xlarge",
+                "c4.8xlarge",
+                "c5.large",
+                "c5.xlarge",
+                "c5.2xlarge",
+                "c5.4xlarge",
+                "c5.9xlarge",
+                "c5.12xlarge",
+                "c5.18xlarge",
+                "c5.24xlarge",
+                "d2.xlarge",
+                "d2.2xlarge",
                 "d2.4xlarge",
+                "d2.8xlarge",
+                "h1.2xlarge",
+                "h1.4xlarge",
+                "h1.8xlarge",
+                "h1.16xlarge",
                 "m4.large",
                 "m4.xlarge",
                 "m4.2xlarge",
-                "m4.4xlarge"
+                "m4.4xlarge",
+                "m4.10xlarge",
+                "m4.16xlarge",
+                "m5.large",
+                "m5.xlarge",
+                "m5.2xlarge",
+                "m5.4xlarge",
+                "m5.8xlarge",
+                "m5.12xlarge",
+                "m5.16xlarge",
+                "m5.24xlarge"
             ],
             "ConstraintDescription": "must be a valid EC2 instance type.",
             "Description": "The instance type to launch as FortiAnalyzer On-Demand instances. There are t2.small and compute-optimized instances such as m4 and c4 available with different vCPU sizes and bandwidths. For more information about instance types, see https://aws.amazon.com/ec2/instance-types/"
