--- a/templates/autoscale-existing-vpc.template
+++ b/templates/autoscale-existing-vpc.template
@@ -22,7 +22,7 @@
             "Default": "aws-quickstart",
             "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
             "ConstraintDescription": "Quick Start S3 bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
-            "Description": "S3 bucket name for the Quick Start assets. Can only contain numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-)."
+            "Description": "The name of the S3 bucket you created for your copy of Quick Start assets if you decide to customize the Quick Start for your own use. It can only contain numbers, lowercase letters, uppercase letters, and hyphens (-), but should not start or end with a hyphen (-)."
         },
         "QSS3KeyPrefix": {
             "Type": "String",
