--- a/templates/autoscale-existing-vpc.template
+++ b/templates/autoscale-existing-vpc.template
@@ -213,7 +213,7 @@
             "MinValue": 30,
             "MaxValue": 90,
             "ConstraintDescription": "must be a valid number between 30 and 90.",
-            "Description": "The length of time (in seconds) that a FortiGate instance waits between sending heartbeat requests to the Autoscale handler. Minimum is 30. Maximum is 90."
+            "Description": "The length of time (in seconds) that a FortiGate instance waits between sending heartbeat requests to the FortiGate Autoscale handler. Minimum is 30. Maximum is 90."
         },
         "HeartBeatLossCount": {
             "Type": "Number",
