--- a/templates/autoscale-new-vpc.template
+++ b/templates/autoscale-new-vpc.template
@@ -964,7 +964,7 @@
                     "default": "Maximum group size (BYOL)"
                 },
                 "FgtAsgDesiredCapacityPayg": {
-                    "default": "Desired capacity (On-Demand)"
+                    "default": "Desired capacity (On-demand)"
                 },
                 "FgtAsgMinSizePayg": {
                     "default": "Minimum group size (On-Demand)"
