--- a/templates/autoscale-new-vpc.template
+++ b/templates/autoscale-new-vpc.template
@@ -1154,7 +1154,7 @@
             }
         },
         "FgtLicensingModel": {
-            "Description": "The FortiGate licensing model in the Auto Scaling group(s) for the initial deployment of this stack. (Options: On-Demand-only, BYOL-only, Hybrid)",
+            "Description": "The FortiGate licensing model in the Auto Scaling group(s) for the initial deployment of this stack. (Options: On-demand-only, BYOL-only, Hybrid)",
             "Value": {
                 "Fn::GetAtt": ["StackMainWorkload", "Outputs.FgtLicensingModel"]
             }
