--- a/templates/create-auto-scaling-group.template
+++ b/templates/create-auto-scaling-group.template
@@ -19,7 +19,7 @@
             "AllowedPattern": "[0-9a-zA-Z@.#-]+",
             "MaxLength": 64,
             "ConstraintDescription": "Resource tag prefix can include numbers, lowercase letters, uppercase letters, ampersat(@) , hyphens (-), period (.), and hash (#). Max length is 64.",
-            "Description": "A prefix for tag key ResourceGroup on all resources. It's also used as the name prefix of all applicable resources. Can only contain numbers, lowercase letters, uppercase letters, ampersat(@) , hyphens (-), period (.), and hash (#). Max length is 64."
+            "Description": "The ResourceGroup Tag Key used on all resources and as the name prefix of all applicable resources. It can only contain numbers, lowercase letters, uppercase letters, ampersat(@), hyphens (-), period (.), and hash (#). Max length is 64."
         },
         "UniqueID": {
             "Type": "String",
