--- a/templates/create-auto-scaling-group.template
+++ b/templates/create-auto-scaling-group.template
@@ -131,7 +131,7 @@
             "Default": 0,
             "MinValue": 0,
             "ConstraintDescription": "must be a valid number not less than 1.",
-            "Description": "Maximum number of FortiGate instances in the Auto-Scaling Group. Minimum is 2."
+            "Description": "The maximum number of FortiGate instances in the Auto Scaling group. Minimum is 2."
         },
         "AsgCooldown": {
             "Type": "Number",
